--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-JWT_SECRET="MyAPP_Rohit"
+JWT_SECRET="MYAPP_Rohit_2026_Secure_Key"
 EMAIL_USERNAME="kanwar.rohit2905@gmail.com",                
 EMAIL_PASSWORD= "srni jtcf mxnj vzzy",
 MONGODB_URI=your-mongodb-uri
