Final commit with admin dashboard and all fixes
- Add comprehensive admin dashboard HTML interface
- Fix JWT error handling with specific error messages
- Add GET test-email endpoint to fix 404 errors
- Fix email configuration and error handling
- Add getUserById route and function
- Complete user management system ready for deployment

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 JWT_SECRET="MYAPP_Rohit_2026_Secure_Key"
 EMAIL_USERNAME="kanwar.rohit2905@gmail.com",                
 EMAIL_PASSWORD= "srni jtcf mxnj vzzy",
-MONGODB_URI=your-mongodb-uri
+MONGODB_URI="https://charts.mongodb.com/charts-web-development-mgotuwj"
 SMTP_PORT=587
 PORT = 5000
